--- a/README.me
+++ b/README.me
@@ -1,1 +1,11 @@
 HABBOCMS 
+
+Cette version est actuellement en cour de développement -> 
+
+Développeur ->
+JAVASCRIPT/PHP:
+FIX0R
+HTML/CSS:
+STREAMING HOLOS
+
+-> la version complète du CMS sera payante 25euros.
